# PythonTutorExercises

./: CLI_PLAN.md  README.md  main.py  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/agents/: exercise_generation.md.agent.md  exercise_verifier.md.agent.md
.github/prompts/: exercise_generation.chatmode.md
.github/workflows/: tests.yml
docs/: CLI_README.md  development.md  exercise-generation-cli.md  exercise-generation.md  setup.md  testing-framework.md
docs/exercise-types/: debug.md  make.md  modify.md
exercises/: __init__.py
exercises/ex001_sanity/: README.md
exercises/ex003_sequence_modify_variables/: README.md
exercises/sequence/: OrderOfTeaching.md
exercises/sequence/debug/ex004_sequence_debug_syntax/: OVERVIEW.md
exercises/sequence/debug/ex005_sequence_debug_logic/: OVERVIEW.md  README.md
exercises/sequence/modify/ex002_sequence_modify_basics/: OVERVIEW.md  README.md  solutions.md
exercises/sequence/modify/ex003_sequence_modify_variables/: OVERVIEW.md  README.md  solutions.md
notebooks/: ex001_sanity.ipynb  ex002_sequence_modify_basics.ipynb  ex003_sequence_modify_variables.ipynb  ex004_sequence_debug_syntax.ipynb  ex005_sequence_debug_logic.ipynb
notebooks/solutions/: ex004_sequence_debug_syntax.ipynb  ex005_sequence_debug_logic.ipynb
scripts/: new_exercise.py  verify_exercise_quality.py
scripts/template_repo_cli/: __main__.py  cli.py
scripts/template_repo_cli/core/: collector.py  github.py  packager.py  selector.py
scripts/template_repo_cli/utils/: config.py  filesystem.py  validation.py
template_repo_files/: README.md.template  pyproject.toml
tests/: notebook_grader.py  test_debug_explanations.py  test_ex001_sanity.py  test_ex002_sequence_modify_basics.py  test_ex003_sequence_modify_variables.py  test_ex004_sequence_debug_syntax.py  test_ex005_sequence_debug_logic.py  test_exercise_type_docs.py  test_new_exercise.py
tests/template_repo_cli/: conftest.py  test_collector.py  test_filesystem.py  test_github.py  test_integration.py  test_packager.py  test_selector.py  test_validation.py
