[project]
name = "python-tutor-exercises"
version = "0.1.0"
description = "Notebook-based Python exercises with automated tests (GitHub Classroom friendly)."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Bassaleg School" }]

dependencies = [
  "pytest>=8.0",
  "ruff>=0.6",
  "ipykernel>=6.0",
  "jupyterlab>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
  "ipykernel>=6.0",
  "jupyterlab>=4.0",
]

[project.scripts]
# Console entrypoint for the template repository CLI. Installs as `template-repo-cli` when the package is
# installed (e.g., `pip install -e ".[dev]"`).
template-repo-cli = "scripts.template_repo_cli.cli:main"
template_repo_cli = "scripts.template_repo_cli.cli:main"

[tool.setuptools]
packages = ["scripts.template_repo_cli", "scripts.template_repo_cli.core", "scripts.template_repo_cli.utils", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
exclude = [
  "notebooks/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90", "LOG", "PIE", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 6
