[project]
name = "python-exercises"
version = "0.1.0"
description = "Python exercises with automated testing"
readme = "README.md"
requires-python = ">=3.11"

# All dependencies must be installable via micropip in VS Code for the Web
# See: https://pyodide.org/en/stable/usage/packages-in-pyodide.html
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ipykernel>=6.0",
  "jupyterlab>=4.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["."]
